syntax = "proto3";

package uint32;

option go_package = "xgo/tests/pb/pbinvalid";

//import "google/protobuf/any.proto";
//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
//
//import "tests/proto/module/external.proto";

import "proto/json.proto";

message Uint3222 {
  uint32 field22 = 22 [ (json.field) = { format: { map: { value: { } } } } ];
}
